# cpp-template

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  deployment.yaml  dockerignore
.github/: CODEOWNERS
src/: main.cpp
